change activity on dashboard

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -14,8 +14,7 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </div>
-          <h4 class="mb-0">9.823</h4>
-          <p>Members online</p>
+          <p>groups online</p>
         </div>
         <div class="chart-wrapper px-3" style="height:70px;">
           <canvas baseChart class="chart"
@@ -36,8 +35,7 @@
           <button type="button" class="btn btn-transparent p-0 float-right">
             <i class="icon-location-pin"></i>
           </button>
-          <h4 class="mb-0">9.823</h4>
-          <p>Members online</p>
+          <p>students online</p>
         </div>
         <div class="chart-wrapper px-3" style="height:70px;">
           <canvas baseChart class="chart"
@@ -65,8 +63,7 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </div>
-          <h4 class="mb-0">9.823</h4>
-          <p>Members online</p>
+          <p>members online</p>
         </div>
         <div class="chart-wrapper" style="height:70px;">
           <canvas baseChart class="chart"
@@ -94,7 +91,6 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </div>
-          <h4 class="mb-0">9.823</h4>
           <p>Members online</p>
         </div>
         <div class="chart-wrapper px-3" style="height:70px;">
@@ -115,7 +111,7 @@
     <div class="card-body">
       <div class="row">
         <div class="col-sm-5">
-          <h4 class="card-title mb-0">Traffic</h4>
+          <h4 class="card-title mb-0">Activity</h4>
           <div class="small text-muted">November 2017</div>
         </div><!--/.col-->
         <div class="col-sm-7 d-none d-md-block">
