--- a/src/app/views/pages/register.component.html
+++ b/src/app/views/pages/register.component.html
@@ -5,7 +5,7 @@
         <div class="card mx-4">
           <div class="card-body p-4">
             <h1>Register</h1>
-            <p class="text-muted">Create your account</p>
+            <p class="text-muted">Login or Create your account</p>
             <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="icon-user"></i></span>
@@ -39,10 +39,10 @@
           <div class="card-footer p-4">
             <div class="row">
               <div class="col-6">
-                <button class="btn btn-block btn-facebook" type="button"><span>facebook</span></button>
+                <button class="btn btn-block btn-google-plus" (click)="login()" type="button"><span>Google</span></button>
               </div>
               <div class="col-6">
-                <button class="btn btn-block btn-twitter" type="button"><span>twitter</span></button>
+                <button class="btn btn-block btn-github" type="button"><span>GitHub</span></button>
               </div>
             </div>
           </div>
