UI Changes - BananiumLabs Credit

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,11 @@
 /*!
  * CoreUI - Open Source Bootstrap Admin Template
+ * MODIFIED BY BananiumLabs - CUSTOM For Cheery Class
  * @version v1.0.10
  * @link http://coreui.io
+ * @link https://bananiumlabs.com
  * Copyright (c) 2018 creativeLabs Łukasz Holeczek
+ * Copyright (c) 2018 bananiumLabs
  * @license MIT
  */
 
