--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,4 +1,4 @@
 <footer class="app-footer">
-  <span><a href="http://coreui.io">CoreUI</a> &copy; 2018 creativeLabs.</span>
-  <span class="ml-auto">Powered by <a href="http://coreui.io">CoreUI</a></span>
+  <span><a href="https://bananiumlabs.com">CheeryClass</a> &copy; 2018 BananiumLabs.</span>
+  <span class="ml-auto">Created With ♥ For <a href="https://www.hackcupertino.com"><b>Hack Cupertino 2018</b></a></span>
 </footer>
