Remove Extraneous Code

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -125,7 +125,7 @@
 
 
 
-<div class="animated fadeIn">
+<!-- <div class="animated fadeIn">
   <div class="row">
     <div class="col-sm-6 col-lg-3">
       <div class="card text-white bg-primary">
@@ -148,9 +148,9 @@
             [legend]="lineChart1Legend" [chartType]="lineChart1Type" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--/.col-->
-    <div class="col-sm-6 col-lg-3">
+    <!-- <div class="col-sm-6 col-lg-3">
       <div class="card text-white bg-info">
         <div class="card-body pb-0">
           <button type="button" class="btn btn-transparent p-0 float-right">
@@ -163,9 +163,9 @@
             [legend]="lineChart2Legend" [chartType]="lineChart2Type" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--/.col-->
-    <div class="col-sm-6 col-lg-3">
+    <!-- <div class="col-sm-6 col-lg-3">
       <div class="card text-white bg-warning">
         <div class="card-body pb-0">
           <div class="btn-group float-right" dropdown>
@@ -185,9 +185,9 @@
             [legend]="lineChart3Legend" [chartType]="lineChart3Type" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--/.col-->
-    <div class="col-sm-6 col-lg-3">
+    <!-- <div class="col-sm-6 col-lg-3">
       <div class="card text-white bg-danger">
         <div class="card-body pb-0">
           <div class="btn-group float-right" dropdown>
@@ -207,20 +207,20 @@
             [legend]="barChart1Legend" [chartType]="barChart1Type" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--/.col-->
-  </div>
+  <!-- </div> -->
   <!--/.row-->
-  <div class="card">
+  <!-- <div class="card">
     <div class="card-body">
       <div class="row">
         <div class="col-sm-5">
           <h4 class="card-title mb-0">Activity</h4>
 
           <div class="small text-muted">November 2017</div>
-        </div>
+        </div> -->
         <!--/.col-->
-        <div class="col-sm-7 d-none d-md-block">
+        <!-- <div class="col-sm-7 d-none d-md-block">
           <button type="button" class="btn btn-primary float-right">
             <i class="icon-cloud-download"></i>
           </button>
@@ -229,11 +229,11 @@
             <label class="btn btn-outline-secondary" [(ngModel)]="radioModel" btnRadio="Month" id="option2">Month</label>
             <label class="btn btn-outline-secondary" [(ngModel)]="radioModel" btnRadio="Year" id="option3">Year</label>
           </div>
-        </div>
+        </div> -->
         <!--/.col-->
-      </div>
+      <!-- </div> -->
       <!--/.row-->
-      <div class="chart-wrapper" style="height:300px;margin-top:40px;">
+      <!-- <div class="chart-wrapper" style="height:300px;margin-top:40px;">
         <canvas baseChart class="chart" [datasets]="mainChartData" [labels]="mainChartLabels" [options]="mainChartOptions" [colors]="mainChartColours"
           [legend]="mainChartLegend" [chartType]="mainChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
       </div>
@@ -277,10 +277,10 @@
         </li>
       </ul>
     </div>
-  </div>
+  </div> -->
   <!--/.card-->
 
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-sm-6 col-lg-3">
       <div class="social-box facebook">
         <i class="fa fa-facebook"></i>
@@ -299,11 +299,11 @@
             <span>feeds</span>
           </li>
         </ul>
-      </div>
+      </div> -->
       <!--/.social-box-->
-    </div>
+    <!-- </div> -->
     <!--/.col-->
-    <div class="col-sm-6 col-lg-3">
+    <!-- <div class="col-sm-6 col-lg-3">
       <div class="social-box twitter">
         <i class="fa fa-twitter"></i>
         <div class="chart-wrapper">
@@ -321,11 +321,11 @@
             <span>tweets</span>
           </li>
         </ul>
-      </div>
+      </div> -->
       <!--/.social-box-->
-    </div>
+    <!-- </div> -->
     <!--/.col-->
-    <div class="col-sm-6 col-lg-3">
+    <!-- <div class="col-sm-6 col-lg-3">
       <div class="social-box linkedin">
         <i class="fa fa-linkedin"></i>
         <div class="chart-wrapper">
@@ -343,11 +343,11 @@
             <span>feeds</span>
           </li>
         </ul>
-      </div>
+      </div> -->
       <!--/.social-box-->
-    </div>
+    <!-- </div> -->
     <!--/.col-->
-    <div class="col-sm-6 col-lg-3">
+    <!-- <div class="col-sm-6 col-lg-3">
       <div class="social-box google-plus">
         <i class="fa fa-google-plus"></i>
         <div class="chart-wrapper">
@@ -365,14 +365,14 @@
             <span>circles</span>
           </li>
         </ul>
-      </div>
+      </div> -->
       <!--/.social-box-->
-    </div>
+    <!-- </div> -->
     <!--/.col-->
-  </div>
+  <!-- </div> -->
   <!--/.row-->
 
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-12">
       <div class="card">
         <div class="card-header">
@@ -393,9 +393,9 @@
                         (chartClick)="chartClicked($event)"></canvas>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!--/.col-->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                   <div class="callout callout-danger">
                     <small class="text-muted">Recuring Clients</small>
                     <br>
@@ -406,11 +406,11 @@
                         (chartClick)="chartClicked($event)"></canvas>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!--/.col-->
-              </div>
+              <!-- </div> -->
               <!--/.row-->
-              <hr class="mt-0">
+              <!-- <hr class="mt-0">
               <ul class="horizontal-bars">
                 <li>
                   <div class="title">
@@ -510,9 +510,9 @@
                   <small>Recurring clients</small>
                 </li>
               </ul>
-            </div>
+            </div> -->
             <!--/.col-->
-            <div class="col-sm-6 col-lg-4">
+            <!-- <div class="col-sm-6 col-lg-4">
               <div class="row">
                 <div class="col-sm-6">
                   <div class="callout callout-warning">
@@ -525,9 +525,9 @@
                         (chartClick)="chartClicked($event)"></canvas>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!--/.col-->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                   <div class="callout callout-success">
                     <small class="text-muted">Organic</small>
                     <br>
@@ -538,11 +538,11 @@
                         (chartClick)="chartClicked($event)"></canvas>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!--/.col-->
-              </div>
+              <!-- </div> -->
               <!--/.row-->
-              <hr class="mt-0">
+              <!-- <hr class="mt-0">
               <ul class="horizontal-bars type-2">
                 <li>
                   <i class="icon-user"></i>
@@ -619,9 +619,9 @@
                   </button>
                 </li>
               </ul>
-            </div>
+            </div> -->
             <!--/.col-->
-            <div class="col-sm-6 col-lg-4">
+            <!-- <div class="col-sm-6 col-lg-4">
               <div class="row">
                 <div class="col-sm-6">
                   <div class="callout">
@@ -634,9 +634,9 @@
                         (chartClick)="chartClicked($event)"></canvas>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!--/.col-->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                   <div class="callout callout-primary">
                     <small class="text-muted">Bounce Rate</small>
                     <br>
@@ -647,11 +647,11 @@
                         (chartClick)="chartClicked($event)"></canvas>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!--/.col-->
-              </div>
+              <!-- </div> -->
               <!--/.row-->
-              <hr class="mt-0">
+              <!-- <hr class="mt-0">
               <ul class="icons-list">
                 <li>
                   <i class="icon-screen-desktop bg-primary"></i>
@@ -771,11 +771,11 @@
                   </button>
                 </li>
               </ul>
-            </div>
+            </div> -->
             <!--/.col-->
-          </div>
+          <!-- </div> -->
           <!--/.row-->
-          <br>
+          <!-- <br>
           <table class="table table-responsive-sm table-hover table-outline mb-0">
             <thead class="thead-light">
               <tr>
@@ -1017,8 +1017,8 @@
           </table>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--/.col-->
-  </div>
+  <!-- </div> -->
   <!--/.row-->
-</div>
+<!-- </div> -->
