--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,7 @@
  * @link https://bananiumlabs.com
  * Copyright (c) 2018 creativeLabs Łukasz Holeczek
  * Copyright (c) 2018 bananiumLabs
- * @license MIT
+ * @license MITtus
  */
 
 // Override Boostrap variables
