--- a/src/app/views/chartjs/chartjs.component.html
+++ b/src/app/views/chartjs/chartjs.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn">
+<!--<div class="animated fadeIn">
   <div class="card-columns cols-2">
     <div class="card">
       <div class="card-header">
