--- a/src/app/containers/full-layout/full-layout.component.html
+++ b/src/app/containers/full-layout/full-layout.component.html
@@ -1,3 +1,5 @@
+<div id="createAccountModal" class="modal fade customForm" role="dialog" [ngStyle]="{'display': true ? 'block' : 'none', 'opacity': true ? 1 : 0}">
+
 <app-header></app-header>
 <div class="app-body">
   <app-sidebar></app-sidebar>
