Small overhaul of data

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,3 +1,158 @@
+<div class="animated fadeIn">
+
+  <ng-template #modalContent let-close="close">
+    <div class="modal-header">
+      <h5 class="modal-title">Additional Options</h5>
+      <button type="button" class="close" (click)="close()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <div>
+        <div class="row">
+
+          <button type="button" class="btn btn-primary" (click)="visible = !visible">Request Extension</button>
+          <button type="button" class="btn btn-warning" (click)="visibleDebug = !visibleDebug">Show Debug Messages</button>
+        </div>
+        <h3 class="panel-title">
+          <!--<span class="title">Click me!</span>-->
+        </h3>
+        <div class="panel-body" *ngIf="visible">
+          <div class="card card-body">
+
+
+
+
+            <form name="extensionForm" [formGroup]="form" role="form" (ngSubmit)="sendMessage(form.value)">
+
+              <div class="form-group" [class.has-error]="!detail.touched">
+
+                <label for="detail" class="flow-text">Please Describe Why You Would Require An Extension</label>
+                <p>Please be descriptive and your teacher may request additional verifications of your claim.</p>
+                <input [formControl]="detail" required type="text" class="form-control" id="detail" name="detail">
+                <div class="help-block">
+                  <ul class="list-unstyled">
+                    <li *ngIf="detail != undefined && detail.dirty && detail.hasError('required')" class="red-text" style="color: red">A description is required!</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="help-block">
+                <ul class="list-unstyled">
+                  <!--spacer-->
+                </ul>
+              </div>
+              <div class="alert alert-warning" role="alert">
+                <b>Note: This action will deduct 1 Late Pass.</b>
+              </div>
+              <div class="alert alert-info" role="info">
+                <b>You have {{ latePassAmount }} Late Passes Left.</b>
+              </div>
+              <button ng-disabled="extensionForm.$invalid || extensionForm.$pending" type="submit" class="btn btn btn-primary">
+                Submit Extension Request
+              </button>
+
+
+            </form>
+
+
+
+
+
+          </div>
+        </div>
+      </div>
+
+
+      <div>
+
+        <h3 class="panel-title">
+          <!--<span class="title">Click me!</span>-->
+        </h3>
+        <div class="panel-body" *ngIf="visibleDebug">
+          <div class="card card-body">
+            <div>
+              Action:
+              <pre>{{ modalData?.action }}</pre>
+            </div>
+
+            <div>
+              <pre>{{ modalData?.action }}</pre>
+            </div>
+            <div>
+              Event:
+              <pre>{{ modalData?.event | json }}</pre>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-secondary" (click)="close()">OK</button>
+    </div>
+  </ng-template>
+
+  <div class="row text-center">
+    <div class="col-md-4">
+      <div class="btn-group">
+        <div class="btn btn-primary" mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate" (viewDateChange)="activeDayIsOpen = false">
+          Previous
+        </div>
+        <div class="btn btn-outline-secondary" mwlCalendarToday [(viewDate)]="viewDate">
+          Today
+        </div>
+        <div class="btn btn-primary" mwlCalendarNextView [view]="view" [(viewDate)]="viewDate" (viewDateChange)="activeDayIsOpen = false">
+          Next
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
+    </div>
+    <div class="col-md-4">
+      <div class="btn-group">
+        <div class="btn btn-primary" (click)="view = 'month'" [class.active]="view === 'month'">
+          Month
+        </div>
+        <div class="btn btn-primary" (click)="view = 'week'" [class.active]="view === 'week'">
+          Week
+        </div>
+        <div class="btn btn-primary" (click)="view = 'day'" [class.active]="view === 'day'">
+          Day
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+
+  <div [ngSwitch]="view">
+    <mwl-calendar-month-view *ngSwitchCase="'month'" [viewDate]="viewDate" [events]="events" [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen"
+      (dayClicked)="dayClicked($event.day)" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
+    </mwl-calendar-month-view>
+    <mwl-calendar-week-view *ngSwitchCase="'week'" [viewDate]="viewDate" [events]="events" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)"
+      (eventTimesChanged)="eventTimesChanged($event)">
+    </mwl-calendar-week-view>
+    <mwl-calendar-day-view *ngSwitchCase="'day'" [viewDate]="viewDate" [events]="events" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)"
+      (eventTimesChanged)="eventTimesChanged($event)">
+    </mwl-calendar-day-view>
+  </div>
+
+  <br>
+
+
+</div>
+
+
+
+
+
+
+
+
 <!--
 <div class="animated fadeIn">
   <div class="row">
